fltk-sys/src/printer.rs

/* automatically generated by rust-bindgen 0.71.1 */

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Fl_Printer {
    _unused: [u8; 0],
}
unsafe extern "C" {
    pub fn Fl_Printer_new() -> *mut Fl_Printer;
}
unsafe extern "C" {
    pub fn Fl_Printer_delete(self_: *mut Fl_Printer);
}
unsafe extern "C" {
    pub fn Fl_Printer_begin_job(
        self_: *mut Fl_Printer,
        pagecount: ::core::ffi::c_int,
        frompage: *mut ::core::ffi::c_int,
        topage: *mut ::core::ffi::c_int,
        perr_message: *mut *mut ::core::ffi::c_char,
    ) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn Fl_Printer_begin_page(self_: *mut Fl_Printer) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn Fl_Printer_printable_rect(
        self_: *mut Fl_Printer,
        w: *mut ::core::ffi::c_int,
        h: *mut ::core::ffi::c_int,
    ) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn Fl_Printer_margins(
        self_: *mut Fl_Printer,
        left: *mut ::core::ffi::c_int,
        top: *mut ::core::ffi::c_int,
        right: *mut ::core::ffi::c_int,
        bottom: *mut ::core::ffi::c_int,
    );
}
unsafe extern "C" {
    pub fn Fl_Printer_origin(
        self_: *mut Fl_Printer,
        x: *mut ::core::ffi::c_int,
        y: *mut ::core::ffi::c_int,
    );
}
unsafe extern "C" {
    pub fn Fl_Printer_set_origin(
        self_: *mut Fl_Printer,
        x: ::core::ffi::c_int,
        y: ::core::ffi::c_int,
    );
}
unsafe extern "C" {
    pub fn Fl_Printer_scale(self_: *mut Fl_Printer, scale_x: f32, scale_y: f32);
}
unsafe extern "C" {
    pub fn Fl_Printer_rotate(self_: *mut Fl_Printer, angle: f32);
}
unsafe extern "C" {
    pub fn Fl_Printer_translate(
        self_: *mut Fl_Printer,
        x: ::core::ffi::c_int,
        y: ::core::ffi::c_int,
    );
}
unsafe extern "C" {
    pub fn Fl_Printer_untranslate(self_: *mut Fl_Printer);
}
unsafe extern "C" {
    pub fn Fl_Printer_end_page(self_: *mut Fl_Printer) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn Fl_Printer_end_job(self_: *mut Fl_Printer);
}
unsafe extern "C" {
    pub fn Fl_Printer_set_current(self_: *mut Fl_Printer);
}
unsafe extern "C" {
    pub fn Fl_Printer_is_current(self_: *mut Fl_Printer) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn Fl_Printer_print_widget(
        self_: *mut Fl_Printer,
        widget: *mut ::core::ffi::c_void,
        delta_x: ::core::ffi::c_int,
        delta_y: ::core::ffi::c_int,
    );
}
unsafe extern "C" {
    pub fn Fl_Printer_print_window(
        self_: *mut Fl_Printer,
        win: *mut ::core::ffi::c_void,
        x_offset: ::core::ffi::c_int,
        y_offset: ::core::ffi::c_int,
    );
}
unsafe extern "C" {
    pub fn Fl_Printer_set_dialog_title(msg: *const ::core::ffi::c_char);
}
unsafe extern "C" {
    pub fn Fl_Printer_set_dialog_printer(msg: *const ::core::ffi::c_char);
}
unsafe extern "C" {
    pub fn Fl_Printer_set_dialog_range(msg: *const ::core::ffi::c_char);
}
unsafe extern "C" {
    pub fn Fl_Printer_set_dialog_copies(msg: *const ::core::ffi::c_char);
}
unsafe extern "C" {
    pub fn Fl_Printer_set_dialog_all(msg: *const ::core::ffi::c_char);
}
unsafe extern "C" {
    pub fn Fl_Printer_set_dialog_pages(msg: *const ::core::ffi::c_char);
}
unsafe extern "C" {
    pub fn Fl_Printer_set_dialog_from(msg: *const ::core::ffi::c_char);
}
unsafe extern "C" {
    pub fn Fl_Printer_set_dialog_to(msg: *const ::core::ffi::c_char);
}
unsafe extern "C" {
    pub fn Fl_Printer_set_dialog_properties(msg: *const ::core::ffi::c_char);
}
unsafe extern "C" {
    pub fn Fl_Printer_set_dialog_copyNo(msg: *const ::core::ffi::c_char);
}
unsafe extern "C" {
    pub fn Fl_Printer_set_dialog_print_button(msg: *const ::core::ffi::c_char);
}
unsafe extern "C" {
    pub fn Fl_Printer_set_dialog_cancel_button(msg: *const ::core::ffi::c_char);
}
unsafe extern "C" {
    pub fn Fl_Printer_set_dialog_print_to_file(msg: *const ::core::ffi::c_char);
}
unsafe extern "C" {
    pub fn Fl_Printer_set_property_title(msg: *const ::core::ffi::c_char);
}
unsafe extern "C" {
    pub fn Fl_Printer_set_property_pagesize(msg: *const ::core::ffi::c_char);
}
unsafe extern "C" {
    pub fn Fl_Printer_set_property_mode(msg: *const ::core::ffi::c_char);
}
unsafe extern "C" {
    pub fn Fl_Printer_set_property_use(msg: *const ::core::ffi::c_char);
}
unsafe extern "C" {
    pub fn Fl_Printer_set_property_save(msg: *const ::core::ffi::c_char);
}
unsafe extern "C" {
    pub fn Fl_Printer_set_property_cancel(msg: *const ::core::ffi::c_char);
}
